# grid-interconnection-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml
alembic/versions/: 20260326_01_initial_schema.py  20260326_02_users_and_auth.py  20260326_03_activity_events.py
app/: activity_service.py  auth.py  config.py  db.py  main.py  models.py  portfolio_io.py  reporting.py  schemas.py  scoring.py  services.py  user_service.py
app/static/: app.js  login.js  styles.css
app/templates/: index.html  login.html
docs/: launch-readiness.md  marketing-plan.md
tests/: conftest.py  test_activity_api.py  test_activity_service.py  test_admin_api.py  test_api_sites.py  test_auth.py  test_bulk_import_export_api.py  test_db.py  test_health.py  test_migrations.py  test_portfolio_io.py  test_projects_api.py  test_reporting.py  test_scoring.py  test_security.py  test_services.py  test_web.py
